--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,14 +1,14 @@
 /* @import url('./base/nullstyle.css');
-@import url('./base/variables.css');
+@import url('./base/variables.css'); */
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap');
 
 #root {
-  /* background-color: var(--main-bg-color);
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 16px;
-  color: var(--main-text-color);
-  line-height: 1.3; */
+  /* color: var(--main-text-color); */
+  line-height: 1.3;
+  /* background-color: var(--main-bg-color); */
   min-height: 100vh;
 }
 
